--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Contato - Studio Classe A</title>
+  <title>Contato - CDH</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -43,7 +43,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto"><a href="index.html">Studio</a></h1>
+      <h1 class="logo me-auto"><a href="index.html">Centro de Danças Harmonia</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -55,24 +55,6 @@
           <li><a href="trainers.html">Professoas</a></li>
           <li><a href="events.html">Eventos</a></li>
           <li><a href="pricing.html">Preços</a></li>
-
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-            </ul>
-          </li>
           <li><a class="active" href="contact.html">Contato</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -89,7 +71,7 @@
     <div class="breadcrumbs" data-aos="fade-in">
       <div class="container">
         <h2>Entre em contato</h2>
-        <p>Venha visitar nossa escola para uma aula experimental. </p>
+        <p>Venha visitar nossa escola para uma aula experimentale apaixone-se pela dança. </p>
       </div>
     </div><!-- End Breadcrumbs -->
 
@@ -115,7 +97,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>studioclassea@gmail.com</p>
+                <p>contatocdh@gmail.com</p>
               </div>
 
               <div class="phone">
