--- a/contact.html
+++ b/contact.html
@@ -9,9 +9,10 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
-  <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+ <!-- Favicons -->
+ <link href="assets/img/dancarino.png" rel="icon">
+ <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -60,7 +61,7 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <a href="courses.html" class="get-started-btn">Get Started</a>
+      <a href="courses.html" class="get-started-btn">Inicie aqui</a>
 
     </div>
   </header><!-- End Header -->
@@ -152,43 +153,42 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Studio</h3>
+            <h3>Centro de danças harmonia</h3>
             <p>
-              Av. Dr. Cláudio José Gueiros Leite <br>
-              Pau Amarelo, Paulista - PE, 53431-165<br>
+              Av. Dr. Cláudio José Gueiros Leite, 5284  Pau Amarelo, Paulista - PE, 53431-165<br>
               Brasil <br><br>
-              <strong>Phone:</strong> 81 99999-4444<br>
-              <strong>Email:</strong> studioclassea@gmail.com<br>
+              <strong>Telefone:</strong> 81 99999-4444<br>
+              <strong>Email:</strong> contatocdh@gmail.com<br>
             </p>
           </div>
 
           <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Useful Links</h4>
+            <h4> Links</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Sobre</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Serviços</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacidade</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Modalidades</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Valores</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
+            <h4>Nossas modalidades</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Ballet</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Jazz</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Frevo</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Street dance</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Ginástica</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Dança contemporêna</a></li>
             </ul>
           </div>
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Join Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+            <h4>Se inscreva para nossa newsletter</h4>
+            <p>Você por dentro de todas os informativos de eventos e compeonatos</p>
             <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
+              <input type="email" name="email"><input type="submit" value="Inscreva-se">
             </form>
           </div>
 
@@ -200,7 +200,7 @@
 
       <div class="me-md-auto text-center text-md-start">
         <div class="copyright">
-          &copy; Copyright <strong><span>Mentor</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>Centro de danças harmonia</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
@@ -211,11 +211,9 @@
         </div>
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.instagram.com/classe_a_studio/" class="instagram"><i class="bx bxl-instagram"></i></a>
+
       </div>
     </div>
   </footer><!-- End Footer -->
