--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
       <div data-aos="fade-up">
-        <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/place/Studio+de+Dan%C3%A7a+Classe+A/@-7.9114041,-34.8260835,17z/data=!4m6!3m5!1s0x7ab3e5e9ec172d5:0x3f15fe59633f206!8m2!3d-7.9114041!4d-34.8235086!16s%2Fg%2F11ddwyj6yt?entry=ttu" frameborder="0" allowfullscreen></iframe>
+        <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" allowfullscreen></iframe>
       </div>
       
 
