finished treiners section

--- a/trainers.html
+++ b/trainers.html
@@ -85,12 +85,30 @@
         <div class="row" data-aos="zoom-in" data-aos-delay="100">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
-              <img src="assets/img/trainers/trainer-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/trainers/prof ballet 1 (1).jpg" class="img-fluid" alt="">
               <div class="member-content">
-                <h4>Walter White</h4>
-                <span>Web Development</span>
+                <h4>Jessica Cavalcanti</h4>
+                <span>Balé Clássico</span>
                 <p>
-                  Magni qui quod omnis unde et eos fuga et exercitationem. Odio veritatis perspiciatis quaerat qui aut aut aut
+                  Formada em dança pela UFPE. Jessica atua como professora de ballet há mais de 10 anos, tendo experiência com todas as idades e participou do curso de formação para bailarinas do Bolshoi Joinville
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <img src="assets/img/trainers/prof jazz 2.jpg" class="img-fluid" alt="">
+              <div class="member-content">
+                <h4>Ana Souza</h4>
+                <span>Jazz</span>
+                <p>
+                  Com mais de 10 anos de experiência como professora de jazz, dedico-me a ensinar técnicas avançadas e expressão artística aos meus alunos
                 </p>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
@@ -104,31 +122,12 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
-              <img src="assets/img/trainers/trainer-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/trainers/prof 3 frevo.jpg" class="img-fluid" alt="">
               <div class="member-content">
-                <h4>Sarah Jhinson</h4>
-                <span>Marketing</span>
+                <h4>José dos Santos</h4>
+                <span>Frevo</span>
                 <p>
-                  Repellat fugiat adipisci nemo illum nesciunt voluptas repellendus. In architecto rerum rerum temporibus
-                </p>
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-            <div class="member">
-              <img src="assets/img/trainers/trainer-3.jpg" class="img-fluid" alt="">
-              <div class="member-content">
-                <h4>William Anderson</h4>
-                <span>Content</span>
-                <p>
-                  Voluptas necessitatibus occaecati quia. Earum totam consequuntur qui porro et laborum toro des clara
+                  Como instrutor de frevo há mais de uma década, compartilho minha paixão pela dança tradicional nordestina, promovendo suas raízes culturais e técnicas autênticas
                 </p>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
@@ -143,12 +142,12 @@
           <div class="row" data-aos="zoom-in" data-aos-delay="100">
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
               <div class="member">
-                <img src="assets/img/trainers/trainer-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/trainers/prof 4 sd.jpg" class="img-fluid" alt="">
                 <div class="member-content">
-                  <h4>Walter White</h4>
-                  <span>Web Development</span>
+                  <h4>Bruno Vieira</h4>
+                  <span>Street Dance</span>
                   <p>
-                    Magni qui quod omnis unde et eos fuga et exercitationem. Odio veritatis perspiciatis quaerat qui aut aut aut
+                    Como educador de street dance, ofereço uma abordagem dinâmica e contemporânea, fundindo estilos urbanos e movimentos inovadores para inspirar meus alunos
                   </p>
                   <div class="social">
                     <a href=""><i class="bi bi-twitter"></i></a>
@@ -162,12 +161,12 @@
   
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
               <div class="member">
-                <img src="assets/img/trainers/trainer-2.jpg" class="img-fluid" alt="">
+                <img src="assets/img/trainers/prof ginasta 5.jpg" class="img-fluid" alt="">
                 <div class="member-content">
-                  <h4>Sarah Jhinson</h4>
-                  <span>Marketing</span>
+                  <h4>Ingrid Albuquerque</h4>
+                  <span>Ginástica</span>
                   <p>
-                    Repellat fugiat adipisci nemo illum nesciunt voluptas repellendus. In architecto rerum rerum temporibus
+                    Com vasta experiência como professora de ginástica, meu compromisso é promover a saúde e o bem-estar por meio de programas de exercícios personalizados e motivadores
                   </p>
                   <div class="social">
                     <a href=""><i class="bi bi-twitter"></i></a>
@@ -181,12 +180,12 @@
   
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
               <div class="member">
-                <img src="assets/img/trainers/trainer-3.jpg" class="img-fluid" alt="">
+                <img src="assets/img/trainers/prof dc 6.jpg" class="img-fluid" alt="">
                 <div class="member-content">
-                  <h4>William Anderson</h4>
-                  <span>Content</span>
+                  <h4>Suzana Soares</h4>
+                  <span>Dança contemporânea</span>
                   <p>
-                    Voluptas necessitatibus occaecati quia. Earum totam consequuntur qui porro et laborum toro des clara
+                    Como instrutora de dança contemporânea, minha missão é explorar a expressão corporal e emocional, capacitando meus alunos a mergulharem na arte da dança de forma autêntica e criativa
                   </p>
                   <div class="social">
                     <a href=""><i class="bi bi-twitter"></i></a>
