--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
       <h2>Nós somos um studio de danças que atua no mercado há mais de 10 anos</h2>
       <a href="courses.html" class="btn-get-started"> <i>Inicie aqui</i></a>
     </div>
+    <!-- ======= O wallpaper foi definido no css  ======= -->
+
   </section><!-- End Hero -->
 
   <main id="main">
