change images & phrases on courses section

--- a/courses.html
+++ b/courses.html
@@ -86,7 +86,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="course-item">
-              <img src="assets/img/babyballet2.jpeg" class="img-fluid" alt="...">
+              <img src="assets/img/ballet 1.jpg" class="img-fluid" alt="...">
               <div class="course-content">
                 <div class="d-flex justify-content-between align-items-center mb-3">
                   <h4>Ballet</h4>
@@ -94,11 +94,11 @@
                 </div>
 
                 <h3><a href="course-details.html">Do baby ao adulto</a></h3>
-                <p>Esta modalidade é ideal para crianças pequenas pois estimula a atividade física.</p>
+                <p>Elegância em movimento: descubra a magia do ballet clássico</p>
                 <div class="trainer d-flex justify-content-between align-items-center">
                   <div class="trainer-profile d-flex align-items-center">
                     <img src="assets/img/trainers/trainer-1.jpg" class="img-fluid" alt="">
-                    <span>Antonio</span>
+                    <span>Jessica</span>
                   </div>
                   <div class="trainer-rank d-flex align-items-center">
                     <i class="bx bx-user"></i>&nbsp;50
@@ -112,7 +112,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
             <div class="course-item">
-              <img src="assets/img/course-2.jpg" class="img-fluid" alt="...">
+              <img src="assets/img/jazz 2.jpg" class="img-fluid" alt="...">
               <div class="course-content">
                 <div class="d-flex justify-content-between align-items-center mb-3">
                   <h4>Jazz</h4>
@@ -120,11 +120,11 @@
                 </div>
 
                 <h3><a href="course-details.html">Do baby ao adulto</a></h3>
-                <p>Esta modalidade é ideal para crianças pequenas pois estimula a atividade física.</p>
+                <p>Energia, ritmo e expressão: mergulhe no mundo vibrante do jazz</p>
                 <div class="trainer d-flex justify-content-between align-items-center">
                   <div class="trainer-profile d-flex align-items-center">
                     <img src="assets/img/trainers/trainer-2.jpg" class="img-fluid" alt="">
-                    <span>Lana</span>
+                    <span>Ana</span>
                   </div>
                   <div class="trainer-rank d-flex align-items-center">
                     <i class="bx bx-user"></i>&nbsp;35
@@ -138,7 +138,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="course-item">
-              <img src="assets/img/course-3.jpg" class="img-fluid" alt="...">
+              <img src="assets/img/frevo 3.jpg" class="img-fluid" alt="...">
               <div class="course-content">
                 <div class="d-flex justify-content-between align-items-center mb-3">
                   <h4>Frevo</h4>
@@ -146,11 +146,11 @@
                 </div>
 
                 <h3><a href="course-details.html">Do baby ao adulto</a></h3>
-                <p>Esta modalidade é ideal para crianças pequenas pois estimula a atividade física.</p>
+                <p>Tradição e alegria em cada passo: sinta o ritmo contagiante do frevo</p>
                 <div class="trainer d-flex justify-content-between align-items-center">
                   <div class="trainer-profile d-flex align-items-center">
                     <img src="assets/img/trainers/trainer-3.jpg" class="img-fluid" alt="">
-                    <span>Brandon</span>
+                    <span>José</span>
                   </div>
                   <div class="trainer-rank d-flex align-items-center">
                     <i class="bx bx-user"></i>&nbsp;20
@@ -164,7 +164,7 @@
           
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="course-item">
-              <img src="assets/img/course-3.jpg" class="img-fluid" alt="...">
+              <img src="assets/img/street dance 4.jpg" class="img-fluid" alt="...">
               <div class="course-content">
                 <div class="d-flex justify-content-between align-items-center mb-3">
                   <h4>Street dance</h4>
@@ -172,11 +172,11 @@
                 </div>
 
                 <h3><a href="course-details.html">Do baby ao adulto</a></h3>
-                <p>Esta modalidade é ideal para crianças pequenas pois estimula a atividade física.</p>
+                <p>Atitude, estilo e liberdade: explore a cultura urbana do street dance</p>
                 <div class="trainer d-flex justify-content-between align-items-center">
                   <div class="trainer-profile d-flex align-items-center">
                     <img src="assets/img/trainers/trainer-3.jpg" class="img-fluid" alt="">
-                    <span>Brandon</span>
+                    <span>Bruno</span>
                   </div>
                   <div class="trainer-rank d-flex align-items-center">
                     <i class="bx bx-user"></i>&nbsp;20
@@ -190,7 +190,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="course-item">
-              <img src="assets/img/course-3.jpg" class="img-fluid" alt="...">
+              <img src="assets/img/ginastica 5.jpg" class="img-fluid" alt="...">
               <div class="course-content">
                 <div class="d-flex justify-content-between align-items-center mb-3">
                   <h4>Ginástica</h4>
@@ -198,11 +198,11 @@
                 </div>
 
                 <h3><a href="course-details.html">Do baby ao adulto</a></h3>
-                <p>Esta modalidade é ideal para crianças pequenas pois estimula a atividade física.</p>
+                <p>Força, flexibilidade e equilíbrio: embarque em uma jornada de vitalidade com a ginástica</p>
                 <div class="trainer d-flex justify-content-between align-items-center">
                   <div class="trainer-profile d-flex align-items-center">
                     <img src="assets/img/trainers/trainer-3.jpg" class="img-fluid" alt="">
-                    <span>Brandon</span>
+                    <span>Ingrid</span>
                   </div>
                   <div class="trainer-rank d-flex align-items-center">
                     <i class="bx bx-user"></i>&nbsp;20
@@ -216,7 +216,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="course-item">
-              <img src="assets/img/course-3.jpg" class="img-fluid" alt="...">
+              <img src="assets/img/danca cont 6.jpg" class="img-fluid" alt="...">
               <div class="course-content">
                 <div class="d-flex justify-content-between align-items-center mb-3">
                   <h4>Dança contemporânea</h4>
@@ -224,11 +224,11 @@
                 </div>
 
                 <h3><a href="course-details.html">Do baby ao adulto</a></h3>
-                <p>Esta modalidade é ideal para crianças pequenas pois estimula a atividade física.</p>
+                <p>Criatividade, expressão e inovação: mergulhe na arte moderna da dança contemporânea</p>
                 <div class="trainer d-flex justify-content-between align-items-center">
                   <div class="trainer-profile d-flex align-items-center">
                     <img src="assets/img/trainers/trainer-3.jpg" class="img-fluid" alt="">
-                    <span>Brandon</span>
+                    <span>Suzana</span>
                   </div>
                   <div class="trainer-rank d-flex align-items-center">
                     <i class="bx bx-user"></i>&nbsp;20
