change about section

--- a/about.html
+++ b/about.html
@@ -72,8 +72,8 @@
     <!-- ======= Breadcrumbs ======= -->
     <div class="breadcrumbs" data-aos="fade-in">
       <div class="container">
-        <h2>About Us</h2>
-        <p>Est dolorum ut non facere possimus quibusdam eligendi voluptatem. Quia id aut similique quia voluptas sit quaerat debitis. Rerum omnis ipsam aperiam consequatur laboriosam nemo harum praesentium. </p>
+        <h2>Sobre nós</h2>
+        <p>Conheça aqui como o CDH surgiu e se mantém até os dias atuais </p>
       </div>
     </div><!-- End Breadcrumbs -->
 
@@ -86,18 +86,24 @@
             <img src="assets/img/about.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+            <h3>Centro de Danças Harmonia: Onde a Arte Ganha Vida</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Desde sua fundação em 2014, o Centro de Danças Harmonia tem sido 
+              uma referência em Recife quando se trata de explorar o poder da expressão 
+              corporal por meio da dança. Com uma variedade de modalidades disponíveis, 
+              estamos comprometidos em proporcionar uma experiência enriquecedora e 
+              transformadora para nossos alunos.
+
+
             </p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-              <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+              <li><i class="bi bi-check-circle"></i> <strong>Excelência no Ensino:</strong> Nossos instrutores altamente qualificados trazem anos de experiência e paixão para cada aula, garantindo que nossos alunos recebam o mais alto padrão de ensino em todas as modalidades. Do ballet clássico à energia contagiante do frevo, cada aula é uma oportunidade para os alunos explorarem seu potencial máximo</li>
+              <li><i class="bi bi-check-circle"></i> <strong>Ambiente Acolhedor e Inspirador:</strong>  No Centro de Danças Harmonia, acreditamos que a dança vai além dos movimentos físicos - é sobre criar um espaço onde os alunos se sintam seguros, confiantes e inspirados a se expressar. Nossa comunidade calorosa e acolhedora é o cenário perfeito para o crescimento pessoal e artístico.</li>
+              <li><i class="bi bi-check-circle"></i>  <strong>Compromisso com a Arte e a Criatividade: </strong> Além de fornecer treinamento técnico sólido, incentivamos nossos alunos a explorar sua criatividade e individualidade. A dança é uma forma de arte em constante evolução, e no Centro de Danças Harmonia, estamos sempre buscando novas maneiras de inspirar e desafiar nossos alunos a alcançarem novos patamares de excelência.</li>
             </ul>
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+              No Centro de Danças Harmonia, estamos dedicados a nutrir o talento e a paixão de nossos alunos, capacitando-os a se tornarem os dançarinos confiantes e versáteis de amanhã. Junte-se a nós e descubra o poder da dança para transformar vidas.
+              
             </p>
 
           </div>
@@ -113,23 +119,23 @@
         <div class="row counters">
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="1232" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Students</p>
+            <span data-purecounter-start="0" data-purecounter-end="1200" data-purecounter-duration="1" class="purecounter"></span>
+            <p>Alunos</p>
           </div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="64" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Courses</p>
+            <span data-purecounter-start="0" data-purecounter-end="6" data-purecounter-duration="1" class="purecounter"></span>
+            <p>Modalidades</p>
           </div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="42" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Events</p>
+            <span data-purecounter-start="0" data-purecounter-end="50" data-purecounter-duration="1" class="purecounter"></span>
+            <p>Competições</p>
           </div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Trainers</p>
+            <span data-purecounter-start="0" data-purecounter-end="6" data-purecounter-duration="1" class="purecounter"></span>
+            <p>Professores</p>
           </div>
 
         </div>
